--- a/jouer.html
+++ b/jouer.html
@@ -48,9 +48,9 @@
         <div class="container">
             <main>
                 <div class="bloc-main">
-                    <div class="gride">
+                    <section class="grid">
 
-                    </div>
+                    </section>
                 </div>
             </main>
         </div>
