--- a/inscription.htm
+++ b/inscription.htm
@@ -48,7 +48,34 @@
         <div class="container">
             <main>
                 <div class="bloc-main">
-                   
+                    <div class="content-inscrire">
+                        <p class="titre-inscrire">S'inscrire</p>
+                        <form>
+                                <div class="form-group">
+                                    <label for="prenom">Nom utilisateur</label><br>
+                                    <input type="text" name="prenom" id="prenom" placeholder="Name">
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="exampleInputEmail1">Entrez votre Email</label><br>
+                                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                                        placeholder="Votre email">
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="exampleInputPassword1">Mot de passe</label><br>
+                                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Mot de passe">
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="exampleInputPassword1">Confirmer mot de passe</label><br>
+                                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="confirmer mot de passe">
+                                </div>
+
+                                <button type="submit" class="btn btn-primary">Créer compte</button>
+                                <button type="cancel" class="btn btn-primary">Annuler</button>
+                        </form>
+                    </div>
                 </div>
             </main>
         </div>
